--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       Some text
     </p>
     <a href="contact-me.html">Contact Me</a>
+    <a href="about.html">Contact Me</a>
     <table>
       <tr>
         <th>Date</th>
